# planner-rs

./: Cargo.toml
documents/: UseCases.md
src/: constants.rs  ident.rs  lib.rs  main.rs  opts.rs  prompt.rs  subcommand.rs
tests/: expected_table_output.txt  lib.rs
