[package]
name = "planner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.8"
tempfile = "3.2.0"

[dependencies]
ron = "0.6.4"
app_dirs = { version = "2.3.2", package = "app_dirs2" }

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
